--- a/k8s/Makefile
+++ b/k8s/Makefile
@@ -13,7 +13,7 @@ kind-create-cluster:
 # src: https://kind.sigs.k8s.io/docs/user/ingress/
 kind-setup-ingress:
 	kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
-	sleep 5
+	sleep 15
 	kubectl wait --namespace ingress-nginx \
 		--for=condition=ready pod \
 		--selector=app.kubernetes.io/component=controller \
@@ -24,7 +24,7 @@ undeployK8:
 	kind delete cluster --name $(NAMESPACE)
 
 deployK8: kind-create-cluster kind-setup-ingress
-	# $(MAKE) init-helm
+	$(MAKE) init-helm
 	$(MAKE) create-namespace
 	$(MAKE) deploy-dependencies
 	$(MAKE) install-charts
