--- a/k8s/charts/gateway/templates/deployment.yaml
+++ b/k8s/charts/gateway/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
         app: {{ .Chart.Name }}
     spec:
       containers:
-      - image: nameko/nameko-example-gateway:{{ .Values.image.tag }}
+      - image: {{ .Values.image.image }}:{{ .Values.image.tag }}
         name: {{ .Chart.Name }}
         env:
           - name: RABBIT_HOST
