--- a/cf/Makefile
+++ b/cf/Makefile
@@ -23,6 +23,6 @@ cf-remove-side-services:
 
 cf-auth:
 	cf api --skip-ssl-validation $(ENDPOINT)
-	admin_pass=$$(kubectl get secret --namespace kubecf var-cf-admin-password -o jsonpath='{.data.password}' | base64 --decode)
+	admin_pass=$$(kubectl get secret --namespace kubecf var-cf-admin-password -o jsonpath='{.data.password}' | base64 --decode); || \
 	cf auth admin "$${admin_pass}"
 	
